# curobo_service

./: .gitattributes  .gitignore  CODEOWNERS  LICENSE  README.md  py-curobo-service.code-workspace  pyproject.toml
examples/: README.md  demo_mpc_client.py
src/nvidia/srl/_curobo_service/: __init__.py  py.typed
src/nvidia/srl/curobo_service/: __init__.py  data_models.py  forward_kinematics.py  inverse_kinematics.py  main.py  motion_generation.py  mpc.py  mpc_data_models.py  utils.py
tests/: curobo_service_test.py  curobo_service_version_test.py
tests/curobo_service/: __init__.py
tests/test_data/franka/: franka.yml
tests/test_data/ur10e/: ur10e.yml
